<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="report_drunken_state_1">멀쩡해요</string>
    <string name="report_drunken_state_2">알딸딸</string>
    <string name="report_drunken_state_3">힘들어요</string>
    <string name="report_drunken_state_4">취했어요</string>
    <string name="report_drunken_state_5">핑글핑글</string>

    <string name="report_title">%d년 %d월 통계</string>

    <string name="item_report_empty_title">한 개 이상의 음주 기록이 필요해요!\n음주 기록하러 가볼까요?</string>
    <string name="item_report_empty">기록하러 가기</string>

    <string name="report_recent_month_drink_title">최근 3개월 음주 빈도</string>
    <string name="report_recent_month_summary_less">음주가 줄었어요.</string>
    <string name="report_recent_month_summary_more">음주가 늘었어요.</string>
    <string name="report_recent_month_summary_same">음주가 동일해요.</string>
    <string name="report_recent_month_amount"><![CDATA[지난달 보다 <b><font color=#7087ff>%d</b>번 %s 마셨어요!]]></string>
    <string name="report_recent_month_amount_same">지난달과 동일하게 마셨어요!</string>

    <string name="report_drunken_state_title">이달의 컨디션</string>
    <string name="report_summary_user">이번달 %s의 고래는?</string>
    <string name="report_add_drink_data">음주 기록을 추가하고\n%s의 고래를 확인하세요!</string>
    <string name="report_summary_drink_data">%s를 좋아하는\n%s 고래</string>

    <string name="report_this_month_drinks_title">이달의 음주량</string>
    <string name="report_this_month_drinks_summary"><![CDATA[총 <b><font color=#7087ff>%d</b>병 <b><font color=#7087ff>%d</b>잔을 마셨어요]]></string>
    <string name="report_this_month_drinks_summary_detail"><![CDATA[<b><font color=#7087ff>%s</b>을 가장 많이 마시고 <b><font color=#7087ff>%s</b>을 가장 조금 마셨네요!]]></string>
    <string name="item_report_piechartview_total">전체</string>
    <string name="item_report_piechartview_summary">%s병 %s잔</string>
    <string name="item_report_piechart_most_drink">가장 많이 마신 술</string>
    <string name="item_report_piechart_least_drink">가장 조금 마신 술</string>
</resources>
