<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="14dp"
    android:paddingStart="20dp"
    android:paddingEnd="30dp">

    <com.sulsul.feature.report.PieChartView
        android:id="@+id/item_report_piechartview"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_item_piechart_total"
        style="@style/Title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_report_piechartview_total"
        android:textColor="@color/gray_300"
        app:layout_constraintBottom_toBottomOf="@id/item_report_piechartview"
        app:layout_constraintEnd_toEndOf="@id/item_report_piechartview"
        app:layout_constraintStart_toStartOf="@id/item_report_piechartview"
        app:layout_constraintTop_toTopOf="@id/item_report_piechartview"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/tv_item_piechart_summary"
        style="@style/Title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/item_report_piechartview_summary"
        android:textColor="@color/gray_500"
        app:layout_constraintEnd_toEndOf="@id/item_report_piechartview"
        app:layout_constraintStart_toStartOf="@id/item_report_piechartview"
        app:layout_constraintTop_toBottomOf="@id/tv_item_piechart_total" />

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_item_piechart_most_drink"
            style="@style/Title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_report_piechart_most_drink"
            android:textColor="@color/gray_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_item_piechart_most_drink_name"
            style="@style/Title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="소주"
            android:textColor="@color/gray_500"
            app:layout_constraintStart_toStartOf="@id/tv_item_piechart_most_drink"
            app:layout_constraintTop_toBottomOf="@id/tv_item_piechart_most_drink" />

        <TextView
            android:id="@+id/tv_item_piechart_most_drink_amount"
            style="@style/Title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/item_report_piechartview_summary"
            android:textColor="@color/gray_500"
            app:layout_constraintBottom_toBottomOf="@id/tv_item_piechart_most_drink_name"
            app:layout_constraintStart_toStartOf="@id/tv_item_piechart_most_drink"
            app:layout_constraintTop_toTopOf="@id/tv_item_piechart_most_drink_name" />

        <TextView
            android:id="@+id/tv_item_piechart_least_drink"
            style="@style/Title3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/item_report_piechart_least_drink"
            android:textColor="@color/gray_500"
            app:layout_constraintTop_toBottomOf="@id/tv_item_piechart_most_drink_name"
            app:layout_constraintStart_toStartOf="@id/tv_item_piechart_most_drink_name"/>

        <TextView
            android:id="@+id/tv_item_piechart_least_drink_name"
            style="@style/Title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="와인"
            android:textColor="@color/gray_500"
            app:layout_constraintStart_toStartOf="@id/tv_item_piechart_least_drink"
            app:layout_constraintTop_toBottomOf="@id/tv_item_piechart_least_drink" />

        <TextView
            android:id="@+id/tv_item_piechart_least_drink_amount"
            style="@style/Title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/item_report_piechartview_summary"
            android:textColor="@color/gray_500"
            app:layout_constraintBottom_toBottomOf="@id/tv_item_piechart_least_drink_name"
            app:layout_constraintStart_toStartOf="@id/tv_item_piechart_least_drink"
            app:layout_constraintTop_toTopOf="@id/tv_item_piechart_least_drink_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
