<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportFragment">

    <LinearLayout
        android:id="@+id/linear_report_select_month"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/blue_200"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_report_arrow_left"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/img_report_arrow_left" />

        <TextView
            android:id="@+id/tv_report_title"
            style="@style/Title2"
            android:layout_width="168dp"
            android:layout_height="24dp"
            android:gravity="center"
            android:text="@string/report_title"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/iv_report_arrow_right"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/img_report_arrow_right" />

    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_report_select_month">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view_report_summary"
                android:layout_width="match_parent"
                android:layout_height="370dp"
                android:background="@color/blue_200"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_report_summary_user"
                style="@style/Title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="28dp"
                android:text="@string/report_summary_user"
                android:textColor="@color/blue_100"
                app:layout_constraintStart_toStartOf="@id/divider_report_1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/Headline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/report_add_drink_data"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@id/tv_report_summary_user"
                app:layout_constraintTop_toBottomOf="@id/tv_report_summary_user" />

            <View
                android:id="@+id/view_report_detail_round"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="@drawable/bg_white_rt42"
                app:layout_constraintBottom_toBottomOf="@id/view_report_summary" />

            <ImageView
                android:id="@+id/iv_report_summary_wave"
                android:layout_width="match_parent"
                android:layout_height="202dp"
                android:src="@drawable/img_report_summary_wave"
                app:layout_constraintBottom_toBottomOf="@id/view_report_summary" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="212dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/img_drunken_whale_default"
                app:layout_constraintTop_toTopOf="@id/iv_report_summary_wave" />

            <include
                android:id="@+id/layout_report_no_data"
                layout="@layout/item_report_empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/view_report_detail_round" />

            <View
                android:id="@+id/divider_report_1"
                android:layout_width="372dp"
                android:layout_height="2dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="18dp"
                android:background="@color/gray_100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_report_no_data" />

            <TextView
                android:id="@+id/tv_report_recent_month_title"
                style="@style/Title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="40dp"
                android:text="@string/report_recent_month_drink_title"
                android:textColor="@color/gray_500"
                app:layout_constraintStart_toStartOf="@id/divider_report_1"
                app:layout_constraintTop_toBottomOf="@id/divider_report_1" />

            <TextView
                android:id="@+id/tv_report_recent_month_summary"
                style="@style/Title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/report_recent_month_summary"
                android:textColor="@color/gray_500"
                app:layout_constraintStart_toStartOf="@id/tv_report_recent_month_title"
                app:layout_constraintTop_toBottomOf="@id/tv_report_recent_month_title" />

            <TextView
                android:id="@+id/tv_report_recent_month_summary_amount"
                style="@style/Title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/report_recent_month_amount"
                android:textColor="@color/gray_500"
                app:layout_constraintStart_toStartOf="@id/tv_report_recent_month_summary"
                app:layout_constraintTop_toBottomOf="@id/tv_report_recent_month_summary" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/lineChart_report"
                android:layout_width="350dp"
                android:layout_height="165dp"
                android:layout_marginTop="32dp"
                android:paddingHorizontal="36dp"
                app:layout_constraintEnd_toEndOf="@id/divider_report_1"
                app:layout_constraintStart_toStartOf="@id/divider_report_1"
                app:layout_constraintTop_toBottomOf="@id/tv_report_recent_month_summary_amount" />

            <View
                android:id="@+id/divider_report_2"
                android:layout_width="372dp"
                android:layout_height="2dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="36dp"
                android:background="@color/gray_100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lineChart_report" />


            <TextView
                android:id="@+id/tv_report_drunken_state_title"
                style="@style/Title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="40dp"
                android:text="@string/report_drunken_state_title"
                android:textColor="@color/gray_500"
                app:layout_constraintStart_toStartOf="@id/divider_report_2"
                app:layout_constraintTop_toBottomOf="@id/divider_report_2" />

            <include
                android:id="@+id/layout_report_drunken_state_bar"
                layout="@layout/item_drunken_state_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="86dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_report_drunken_state_title" />

            <View
                android:id="@+id/view_report_empty_blur"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/a60_white"
                app:layout_constraintBottom_toBottomOf="@id/layout_report_drunken_state_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/divider_report_1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
