<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/container_report_drunken_state_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_report_drunken_state_1"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_drunken_state_1"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_drunken_state_1"
                android:textColor="@color/gray_500" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ProgressBar
                    android:id="@+id/pb_report_drunken_state_1"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="262dp"
                    android:layout_height="12dp"
                    android:progressDrawable="@drawable/progress_drunken_state_1" />

                <TextView
                    android:id="@+id/tv_report_drunken_state_1_value"
                    style="@style/Title3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="5"
                    android:textColor="@color/gray_500" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_report_drunken_state_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_report_drunken_state_1">

        <ImageView
            android:id="@+id/iv_report_drunken_state_2"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_drunken_state_2"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_drunken_state_2"
                android:textColor="@color/gray_500" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ProgressBar
                    android:id="@+id/pb_report_drunken_state_2"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="262dp"
                    android:layout_height="12dp"
                    android:progressDrawable="@drawable/progress_drunken_state_2" />

                <TextView
                    android:id="@+id/tv_report_drunken_state_2_value"
                    style="@style/Title3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="5"
                    android:textColor="@color/gray_500" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_report_drunken_state_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_report_drunken_state_2">

        <ImageView
            android:id="@+id/iv_report_drunken_state_3"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_drunken_state_3"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_drunken_state_3"
                android:textColor="@color/gray_500" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ProgressBar
                    android:id="@+id/pb_report_drunken_state_3"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="262dp"
                    android:layout_height="12dp"
                    android:progressDrawable="@drawable/progress_drunken_state_3" />

                <TextView
                    android:id="@+id/tv_report_drunken_state_3_value"
                    style="@style/Title3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="5"
                    android:textColor="@color/gray_500" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_report_drunken_state_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_report_drunken_state_3">

        <ImageView
            android:id="@+id/iv_report_drunken_state_4"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_drunken_state_4"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_drunken_state_4"
                android:textColor="@color/gray_500" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ProgressBar
                    android:id="@+id/pb_report_drunken_state_4"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="262dp"
                    android:layout_height="12dp"
                    android:progressDrawable="@drawable/progress_drunken_state_4" />

                <TextView
                    android:id="@+id/tv_report_drunken_state_4_value"
                    style="@style/Title3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="5"
                    android:textColor="@color/gray_500" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_report_drunken_state_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_report_drunken_state_4">

        <ImageView
            android:id="@+id/iv_report_drunken_state_5"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_drunken_state_5"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_drunken_state_5"
                android:textColor="@color/gray_500" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ProgressBar
                    android:id="@+id/pb_report_drunken_state_5"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="262dp"
                    android:layout_height="12dp"
                    android:progressDrawable="@drawable/progress_drunken_state_5" />

                <TextView
                    android:id="@+id/tv_report_drunken_state_5_value"
                    style="@style/Title3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="5"
                    android:textColor="@color/gray_500" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
